--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,7 +27,7 @@
   background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(35px);
   -webkit-backdrop-filter: blur(35px);
-  border: 2px solid rgb(255, 217, 4);
+  /* border: 0px solid rgb(255, 217, 4); */
   box-shadow: 
     0 12px 48px rgba(0, 0, 0, 0.25),
     0 6px 24px rgba(0, 0, 0, 0.15),
